// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterInputField renders correctly with an error state 1`] = `
<section
  className="css-usoz6a-newsletterInputFieldStyles"
>
  <label
    htmlFor="testInput"
  >
    testLabel
  </label>
  <input
    className="error"
    id="testInput"
    name="test"
    onChange={[Function]}
    type="text"
  />
  <p
    className="input-error"
  >
    ERROR!
  </p>
</section>
`;

exports[`NewsletterInputField renders correctly with no error state 1`] = `
<section
  className="css-usoz6a-newsletterInputFieldStyles"
>
  <label
    htmlFor="testInput"
  >
    testLabel
  </label>
  <input
    className=""
    id="testInput"
    name="test"
    onChange={[Function]}
    type="text"
  />
  <p
    className="input-error"
  >
    ERROR!
  </p>
</section>
`;
